;; hx - adopted to use tls.lwt

(rule (copy ssl_io_dummy.ml ssl_io.ml))
(rule (copy tls_io_real.ml tls_io.ml))

(library
 (name httpaf_lwt_unix)
 (public_name httpaf-lwt-unix)
 (libraries faraday-lwt-unix httpaf lwt.unix nocrypto.lwt tls.lwt)
 (modules buffer httpaf_lwt_unix tls_io ssl_io)
 (flags (:standard -safe-string)))
